k8s/deployment.yaml
# This file replaces your docker-compose.yml (It creates the Containers and the Network)
# --------------------------------------------------------------------------------------

# 1. REDIS SERVICE (Internal Network)
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - port: 6379
  selector:
    app: redis
---
# 2. REDIS DEPLOYMENT (The Redis Container)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379

---
# 3. NODE APP SERVICE (Replaces NGINX - Exposes Port 80 to the world)
apiVersion: v1
kind: Service
metadata:
  name: bookmycuts-service
spec:
  type: LoadBalancer     # This automatically creates a Load Balancer just like NGINX
  ports:
    - port: 5000          # The main entrance port
      targetPort: 5000    # Pointing to the new app port
  selector:
    app: bookmycuts

---
# 4. NODE APP DEPLOYMENT (The Node.js Containers)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmycuts-backend
spec:
  replicas: 3            # Keeping 3 copies for backup
  selector:
    matchLabels:
      app: bookmycuts
  template:
    metadata:
      labels:
        app: bookmycuts
    spec:
      containers:
      - name: bookmycuts-node
        image: govind858/bookmycuts-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 5

        # Updated CPU/RAM for faster performance
        resources:
          requests:
            cpu: "500m"     # Start with 0.5 CPU
            memory: "512Mi" # Start with 512MB RAM
          limits:
            cpu: "1"        # Max 1.0 CPU
            memory: "1Gi"   # Max 1GB RAM
